# ddg

./: Cargo.toml  README.md  app.go  go.mod  index.html  main.go  main.rs  package-lock.json  package.json  tsconfig.json  vite.config.ts  wails.json
frontend/: map.html  package-lock.json  package.json  package.json.md5  tailwind.config.js
frontend/src/: main.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/types/apache-arrow/: index.d.ts
