[package]
name = "ddg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
duckdb = { version = "0.9.2", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
arrow = { version = "*", default-features = false, features = ["prettyprint", "arrow-ipc"] }
arrow-ipc = {version = "*"}
tokio = "1.35.1"


[[bin]]
name = "ddg"
path = "main.rs"
